<resources>
    <string name="app_name">AkhilBatchuPart2</string>
    <string name="resume">Resume</string>
    <string name="akhilbatchu_b_tech">AkhilBatchu,B-Tech</string>
    <string name="student_amrita">Student @ Amrita</string>
    <string name="amritapuri_kollam">Amritapuri, kollam</string>
    <string name="android">Android</string>
    <string name="_2_udemy_courses">2 Udemy courses</string>
    <string name="range_1">Range 1-10</string>
    <string name="level_6">Level-7</string>
    <string name="level_8">Level-8</string>
    <string name="java">Java</string>
    <string name="verzeo">Verzeo</string>
    <string name="level">Level-6</string>
    <string name="machinelearning">MachineLearning</string>
    <string name="linkedin_url">http://www.linkedin.com/in/akhilbatchu</string>
    <string name="linkedin">Linkedin:</string>
    <string name="github">Github:</string>
    <string name="github_url">http://github.com/akhil117</string>
    <string name="codeforce">Codeforce</string>
    <string name="eduonix">eduonix</string>
    <string name="programming">Programming</string>
    <string name="myPhoneNumber">9848694733</string>
    <string name="title_activity_resume">ResumeActivity</string>
    <string name="location">Location</string>
    <string name="title_activity_short_notes">ShortNotes</string>
    <string name="please_enter_the_message">Please enter the message</string>
    <string name="please_enter_the_title">Please enter the title</string>
    <string name="message">Message</string>
    <string name="_8942">⋮</string>
    <string name="about_us">About Us</string>
    <string name="share">Share</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="share">Share</string>
    <string name="_8942">⋮</string>
    <string name="title123">Title</string>
    <string name="welcome_to_shortnotoes">Welcome to ShortNotoes</string>
</resources>
