<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title123"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/notesTitles"
        android:layout_width="@dimen/titleWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/titleMargin"
        android:ems="10"
        android:hint="@string/please_enter_the_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <TextView
        android:id="@+id/textMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/startMargin"
        android:text="@string/message"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeDescription"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notesTitles" />

    <EditText
        android:id="@+id/messageNotes"
        android:layout_width="@dimen/titleWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/phoneMarginTop"
        android:ems="10"
        android:hint="@string/please_enter_the_message"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMessage" />
</android.support.constraint.ConstraintLayout>